--- a/assets/css/mystyles.scss
+++ b/assets/css/mystyles.scss
@@ -1,12 +1,7 @@
-.has-bkgd {
-    background: url('../images/train.jpg') top center;
+.has-background{
+    background: url('../images/train.jpg') no-repeat top center fixed;
+    background-size: cover;
 };
 
-.has-bkgd-bot {
-    background: url('../images/train.jpg') bottom center;
-    background-size: auto;
-};
 
-.has-margin {
-    margin: 0px 100px;
-};
+
